update swagger to include global mertics quotes; pushed to rubygems and tested on crypto repo
