# ruby/lib/coinmarketcap_api.rb
@@ -1,50 +1,0 @@
-=begin
-#Coinmarketcap API Swagger Implementation
-
-#Define coinmarketcap's api in swagger 2.0 openapi standard
-
-OpenAPI spec version: 1.0.0
-
-Generated by: https://github.com/swagger-api/swagger-codegen.git
-Swagger Codegen version: 2.4.4
-
-=end
-
-# Common files
-require 'coinmarketcap_api/api_client'
-require 'coinmarketcap_api/api_error'
-require 'coinmarketcap_api/version'
-require 'coinmarketcap_api/configuration'
-
-# Models
-require 'coinmarketcap_api/models/info'
-require 'coinmarketcap_api/models/info_urls'
-require 'coinmarketcap_api/models/inline_response_200'
-require 'coinmarketcap_api/models/inline_response_200_1'
-require 'coinmarketcap_api/models/inline_response_200_2'
-require 'coinmarketcap_api/models/inline_response_200_3'
-require 'coinmarketcap_api/models/inline_response_default'
-require 'coinmarketcap_api/models/inline_response_default_1'
-require 'coinmarketcap_api/models/map'
-require 'coinmarketcap_api/models/status'
-
-# APIs
-require 'coinmarketcap_api/api/default_api'
-
-module CoinmarketcapAPI
-  class << self
-    # Customize default settings for the SDK using block.
-    #   CoinmarketcapAPI.configure do |config|
-    #     config.username = "xxx"
-    #     config.password = "xxx"
-    #   end
-    # If no block given, return the default Configuration object.
-    def configure
-      if block_given?
-        yield(Configuration.default)
-      else
-        Configuration.default
-      end
-    end
-  end
-end
